Add cutoff filter for Landscape result coloring. Times that are much slower than the rest are not included in the heatmap coloring